# chunk-lab

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  app.py  pyproject.toml  requirements.txt
chunklab/: __init__.py  embed.py  eval.py  ollama.py  registry.py  store.py  types.py  viz.py
chunklab/chunkers/: __init__.py  _common.py  agentic.py  document.py  fixed.py  hierarchical.py  llm.py  recursive.py  semantic.py
data/: sample_doc.md  sample_eval.json
tests/: test_eval.py  test_registry.py
