[project]
name = "chunklab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chonkie[code,semantic,st,tiktoken]>=1.7.0",
    "chromadb>=1.5.9",
    "pandas>=3.0.3",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
